--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -36,7 +36,7 @@
                                             formControlName="email"
                                             class="form-control"
                                             [class.is-invalid]="f['email'].invalid && f['email'].touched"
-                                            placeholder="nome@esempio.it"
+                                            placeholder="nome.cognome@eurobet.it"
                                     />
                                     <div class="invalid-feedback" *ngIf="f['email'].invalid && f['email'].touched">
                                         <span *ngIf="f['email'].errors?.['required']">L'email è obbligatoria</span>
