--- a/src/app/components/date-selector/date-selector.component.html
+++ b/src/app/components/date-selector/date-selector.component.html
@@ -18,6 +18,7 @@
                                 [(ngModel)]="selectedDate"
                                 (ngModelChange)="onDateChange($event)"
                                 (click)="d.toggle()"
+                                readonly
                                 [minDate]="minDate"
                                 [maxDate]="maxDate"
                                 [markDisabled]="isDisabled"
